--- a/BlackBox/Views/Home/Search.cshtml
+++ b/BlackBox/Views/Home/Search.cshtml
@@ -1,32 +1,13 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<BlackBox.Models.ProductAdditionals.BookModel>
 
-
-@*Старое
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>*@
-
-
-   
-    <header class="bg-dark py-5">
-        <div class="container px-4 px-lg-5 my-5">
-            <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Во всяком деле лучше немного, но хорошего, чем много, но плохого.</h1>
-                <h2 class="display-4 fw-bolder">То же и в книгах.</h2>
-                <p class="lead fw-normal text-white-50 mb-0">Лев Толстой</p>
-            </div>
-        </div>
-    </header>
-    <!-- Section-->
+<div class="container">
+    <div class="display-1">Результаты поиска по запросу "@ViewBag.SearchText"</div>
     <section class="py-5">
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                @foreach (BlackBox.Models.ProductAdditionals.BookModel item in ViewBag.Books)
+                @foreach (BlackBox.Models.ProductAdditionals.BookModel item in Model)
                 {
-                <div class="col mb-5">
+                    <div class="col mb-5">
                     <a class="text-decoration-none" href="@Url.Action("Book", "Product", new {id = item.Book.ID})">
                         <div class="card h-100">
                             <!-- Sale badge-->
@@ -66,3 +47,5 @@
             </div>
         </div>
     </section>
+
+</div>
