--- a/BlackBox/Views/Shared/_Layout.cshtml
+++ b/BlackBox/Views/Shared/_Layout.cshtml
@@ -1,34 +1,62 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - BlackBox</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Black Box</title>
+
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"
+
+    <link href="~/css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/styles.css" />
+
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BlackBox</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container px-4 px-lg-5">
+            <a class="navbar-brand" asp-controller="Home" asp-action="Index">Black Box</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Главная</a></li>
+                    <li class="nav-item">
+                        <form method="get" asp-action="Search" asp-controller="Home">
+                            <input placeholder="Война и мир" type="text" name="SearchString" />
+                            <button type="submit" class="btn btn-primary">Поиск</button>
+                        </form>
+                    </li>
+                    @if (User.IsInRole("Admin"))
+                    {
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Админ-панель</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+                    }
+                </ul>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-right">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <a href="@Url.Action("Cart", "Ordering")" class="nav-link text-dark">Корзина</a>
+                        <a href="@Url.Action("Profile", "Account")" class="nav-link text-dark">@User.Identity.Name</a>
+                        <a href="@Url.Action("Logout", "Account")" class="nav-link text-dark">Выйти</a> }
+                    else
+                    {
+                        <a href="@Url.Action("Login", "Account")" class="nav-link text-dark">Войти</a>
+                        <a href="@Url.Action("Register", "Account")" class="nav-link text-dark">Зарегистрироваться</a>
+                    }
+
                 </div>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+    <!-- Header-->
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -37,12 +65,13 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - BlackBox - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - BlackBox 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://use.fontawesome.com/59bfd9ebd2.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
